format + minor beautifier