@@ -5,11 +5,11 @@
 package io.airbyte.integrations.destination.bigquery.formatter;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableMap;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.integrations.base.JavaBaseConstants;
 import io.airbyte.integrations.destination.StandardNameTransformer;
 import io.airbyte.protocol.models.AirbyteRecordMessage;
+import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
@@ -23,7 +23,7 @@ public class GcsAvroBigQueryRecordFormatter extends DefaultBigQueryRecordFormatt
   public JsonNode formatRecord(AirbyteRecordMessage recordMessage) {
     final long emittedAtMicroseconds = TimeUnit.MILLISECONDS.convert(recordMessage.getEmittedAt(), TimeUnit.MILLISECONDS);
     final JsonNode formattedData = StandardNameTransformer.formatJsonPath(recordMessage.getData());
-    return Jsons.jsonNode(ImmutableMap.of(
+    return Jsons.jsonNode(Map.of(
         JavaBaseConstants.COLUMN_NAME_AB_ID, UUID.randomUUID().toString(),
         JavaBaseConstants.COLUMN_NAME_DATA, formattedData.toString(),
         JavaBaseConstants.COLUMN_NAME_EMITTED_AT, emittedAtMicroseconds));
